# GameOfLife-SFML

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
src/: main.cpp
